# vinkona

./: .gitignore  LICENSE  NOTICE  README.md  Vinkona  install.sh  vinkona.sh
assistant/: .gitignore  CONSCIOUS_REASONING.md  ENVIRONMENTS.md  KNOWLEDGE.md  MAC_TOOLS.md  MEMORY_CONSOLIDATION.md  MUSIC.md  NOTIFICATIONS.md  README.md  USER_MODEL_INTEGRATION.md  VINKONA_INTEGRATION.md  WS_AUTH.md  YOUTUBE.md  ambient.py  asr.py  bench_step.py  calendar_resolve.py  calendar_sync.py  capture.py  cascade_server.py  chat_ui.html  config.json  config.py  config_server.py  config_ui.html  confighelp.py  doctor.py  egress.toml  env.sh  fetch_llama.py  fetch_models.sh  help.json  idle_control.py  initial_setup.sh  install.sh  install_asr.sh  install_memory.sh  install_orpheus.sh  install_orpheus_gguf.sh  install_personaplex.sh  (+95 more)
assistant/amiga_net/: __init__.py  audit.py  broker.py  policy.py  status.py
assistant/config/: config.example.json  personas.example.json
assistant/vinkona_client/: README.md  pubspec.yaml
assistant/vinkona_client/android/: build.gradle.kts
assistant/vinkona_client/android/app/: build.gradle.kts
assistant/vinkona_client/android/app/src/main/: AndroidManifest.xml
assistant/vinkona_client/android/app/src/main/kotlin/com/vinkona/vinkona_client/: MainActivity.kt
assistant/vinkona_client/ios/Runner/: Info.plist
assistant/vinkona_client/ios/Runner.xcodeproj/: project.pbxproj
assistant/vinkona_client/lib/: main.dart
assistant/vinkona_client/test/: widget_test.dart
distiller/: README.md  __init__.py  __main__.py  digest.py  driver.py  merge.py  test_distiller.py
docs/: net-inventory.md
knowledge-host/: .gitignore  README.md  VINKONA-CONF-01_conflict_relations_spec.md  VINKONA-DMAP-01_drug_import_mapping_spec.md  VINKONA-LEX-01_alias_lexicon_matcher_spec.md  VINKONA-STAT-01_corpus_statistics_pass_spec.md  adjudicate.sh  config.example.toml  distill.sh  env.sh  install.sh  reset.sh  run-reranker.sh  run.sh
knowledge-host/knowledgehost/: __init__.py  __main__.py  causenet.py  conceptnet.py  config.py  conflict.py  corpstats.py  distill.py  dmap.py  evalharness.py  extractor_prompts.md  facets.py  grounding.py  help.json  ingest.py  ingest.sh  install.sh  lex.py  lm_lease.py  ops.py  query.py  reconcile.py  refine.py  server.py  tools.py  understand.py  viewer.py
knowledge-host/knowledgehost/sources/: epub.py  pdf.py  wikipedia.py
knowledge-host/tests/: conflict_acceptance.py  dmap_acceptance.py  lex_acceptance.py  stat_acceptance.py
launcher/: README.md  install-desktop.sh  make_icons.py
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: main.rs
launcher/ui/: index.html
scripts/: gates.sh
