[package]
name = "vinkona-launcher"
version = "0.1.0"
description = "Desktop shell for the Vinkona stack: status, start/stop, web UIs"
edition = "2021"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
